--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-		<Version>0.1.0-rc.1</Version>
+		<Version>1.0.0</Version>
 		<Authors>Bálint Nagy</Authors>
 		<Description>EntityFramework Core database scaffolding extensions</Description>
 		<Copyright>Copyright (c) 2022 Bálint Nagy</Copyright>
@@ -23,8 +23,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="../icon.png" Pack="true" PackagePath="\" />
-		<None Include="../../LICENSE" Pack="true" PackagePath="\" />
-		<None Include="../../README.md" Pack="true" PackagePath="\" />
+		<None Include="../icon.png" Pack="true" PackagePath="\" Visible="false" />
+		<None Include="../../LICENSE" Pack="true" PackagePath="\" Visible="false" />
+		<None Include="../../README.md" Pack="true" PackagePath="\" Visible="false" />
 	</ItemGroup>
 </Project>
