--- a/src/EntityFrameworkCore.Scaffolding.Extensions/EntityFrameworkCore.Scaffolding.Extensions.csproj
+++ b/src/EntityFrameworkCore.Scaffolding.Extensions/EntityFrameworkCore.Scaffolding.Extensions.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0-rc.1.22426.7">
+	<PackageReference Include="Microsoft.EntityFrameworkCore" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
